--- a/src/main/resources/fxml/Ventas/Proforma/View.fxml
+++ b/src/main/resources/fxml/Ventas/Proforma/View.fxml
@@ -1,11 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
+      <AnchorPane layoutX="303.0" layoutY="53.0" prefHeight="572.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="395.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="477.0" layoutY="10.0" text="Nueva Proforma">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Line endX="850.0" layoutX="126.0" layoutY="49.0" startX="-100.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="45.0" layoutY="83.0" prefHeight="120.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
+               <children>
+                  <DatePicker fx:id="fechaProfSh" layoutX="70.0" layoutY="65.0" />
+                  <TextField fx:id="clienteSh" layoutX="70.0" layoutY="16.0" prefHeight="25.0" prefWidth="248.0" />
+                  <Label layoutX="12.0" layoutY="65.0" text="Fecha:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="12.0" layoutY="16.0" prefHeight="21.0" prefWidth="114.0" text="Cliente:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="342.0" layoutY="65.0" text="Tipo de Moneda:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <RadioButton fx:id="solesProf" layoutX="467.0" layoutY="67.0" mnemonicParsing="false" text="Soles (S/.)" />
+                  <RadioButton fx:id="dolProf" layoutX="555.0" layoutY="67.0" mnemonicParsing="false" text="Dólares ($)" />
+                  <Label layoutX="683.0" layoutY="16.0" prefHeight="21.0" prefWidth="114.0" text="Teléfono:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="telfSh" layoutX="754.0" layoutY="16.0" prefHeight="25.0" prefWidth="151.0" />
+                  <Label layoutX="342.0" layoutY="18.0" prefHeight="21.0" prefWidth="114.0" text="E-mail:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="correoSh" layoutX="400.0" layoutY="16.0" prefHeight="25.0" prefWidth="248.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="33.0" layoutY="339.0" prefHeight="402.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+               <children>
+                  <AnchorPane layoutX="38.0" layoutY="195.0" prefHeight="330.0" prefWidth="765.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="72.0">
+                     <children>
+                        <TableView fx:id="productosProf" layoutX="12.0" layoutY="14.0" prefHeight="212.0" prefWidth="750.0">
+                           <columns>
+                              <TableColumn prefWidth="48.0" text="Cod." />
+                              <TableColumn prefWidth="265.0" text="Descripción" />
+                              <TableColumn prefWidth="67.0" text="Cant." />
+                              <TableColumn prefWidth="64.33334350585938" text="P.U." />
+                              <TableColumn prefWidth="123.0" text="Precio (S/)" />
+                              <TableColumn prefWidth="66.33334350585938" text="P.U." />
+                              <TableColumn prefWidth="116.0" text="Precio ($)" />
+                           </columns>
+                        </TableView>
+                        <Label layoutX="316.0" layoutY="240.0" text="Subtotal (S/.):" />
+                        <Label layoutX="299.0" layoutY="270.0" text="I.G.V. - 18% (S/.):" />
+                        <Label layoutX="333.0" layoutY="300.0" text="Total (S/.):" />
+                        <TextField fx:id="subTotalSol" editable="false" layoutX="391.0" layoutY="235.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="igvSol" editable="false" layoutX="391.0" layoutY="265.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="totalSol" editable="false" layoutX="391.0" layoutY="295.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <Label layoutX="572.0" layoutY="239.0" text="Subtotal ($):" />
+                        <Label layoutX="555.0" layoutY="269.0" text="I.G.V. - 18% ($):" />
+                        <Label layoutX="590.0" layoutY="299.0" text="Total ($):" />
+                        <TextField fx:id="subTotalDol" editable="false" layoutX="645.0" layoutY="234.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="igvDol" editable="false" layoutX="645.0" layoutY="264.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="totalDol" editable="false" layoutX="645.0" layoutY="294.0" prefHeight="20.0" prefWidth="116.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </AnchorPane>
+                  <TitledPane animated="false" collapsible="false" layoutX="777.0" layoutY="85.0" prefHeight="311.0" prefWidth="218.0" text="Acciones" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="777.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="85.0">
+                     <content>
+                        <AnchorPane prefHeight="285.0" prefWidth="409.0">
+                           <children>
+                              <Button fx:id="generarPed" layoutX="89.0" layoutY="67.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="N" />
+                              <Button fx:id="EliminarProf" layoutX="89.0" layoutY="150.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                              <Label layoutX="63.0" layoutY="109.0" text="Generar Pedido">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="61.0" layoutY="193.0" text="Eliminar Proforma">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+                  <AnchorPane layoutX="1.0" layoutY="-52.0" prefHeight="72.0" prefWidth="750.0" AnchorPane.bottomAnchor="330.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label layoutX="12.0" layoutY="15.0" text="Cant.:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Spinner fx:id="cantProd" editable="true" layoutX="70.0" layoutY="13.0" prefHeight="20.0" prefWidth="60.0" />
+                        <Label layoutX="342.0" layoutY="15.0" text="Producto:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="producto" layoutX="414.0" layoutY="13.0" prefHeight="25.0" prefWidth="237.0" />
+                        <Button fx:id="agregarProdProf" layoutX="658.0" layoutY="14.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="101.0" text="Agregar Producto">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </AnchorPane>
    </children>
 </AnchorPane>
