--- a/src/main/resources/fxml/NavegacionLateral.fxml
+++ b/src/main/resources/fxml/NavegacionLateral.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import edu.pe.pucp.team_1.dp1.botonimagen.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.NavegacionLateralController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.NavegacionLateralController">
    <children>
       <Accordion fx:id="acordion_modulos" prefHeight="572.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <panes>
@@ -53,7 +50,7 @@
                         <Button layoutX="75.0" layoutY="168.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Pedido" />
                         <Button layoutX="66.0" layoutY="233.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Proveedor" />
                         <Button layoutX="65.0" layoutY="289.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Promocion" />
-                        <Button layoutX="25.0" layoutY="348.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Documentos de Ventas" />
+                        <Button layoutX="25.0" layoutY="348.0" mnemonicParsing="false" onAction="#abrirBusquedaModulo" text="Documentos De Ventas" />
                      </children>
                   </AnchorPane>
                </content>
