--- a/src/main/resources/fxml/Ventas/Pedido/Index.fxml
+++ b/src/main/resources/fxml/Ventas/Pedido/Index.fxml
@@ -1,11 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1">
-    
+<AnchorPane id="AnchorPane" fx:id="pedido_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.PedidoController">
+   <children>
+      <AnchorPane prefHeight="572.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <TitledPane animated="false" collapsible="false" layoutX="23.0" layoutY="50.0" prefHeight="123.0" prefWidth="953.0" text="Búsqueda" AnchorPane.bottomAnchor="372.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="50.0">
+               <content>
+                  <AnchorPane prefHeight="91.0" prefWidth="951.0">
+                     <children>
+                        <TextField fx:id="clienteBusq" layoutX="452.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                        <Button fx:id="buscarPedido" layoutX="864.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                        <Label layoutX="11.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Pedido:" AnchorPane.topAnchor="0.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="estadoBusq" layoutX="821.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                        <TextField fx:id="pedidoBusq" layoutX="129.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                        <Label layoutX="334.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Cliente:" AnchorPane.topAnchor="0.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="703.0" layoutY="9.6" text="Estado:" AnchorPane.topAnchor="0.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
+            <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="89.0" layoutY="8.0" text="Pedido">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="visualizarPedido1" layoutX="879.0" layoutY="11.0" mnemonicParsing="false" onAction="#abrirEditarFormulario" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <Button layoutX="768.0" layoutY="11.0" mnemonicParsing="false" onAction="#abrirEditarFormulario" prefHeight="25.0" prefWidth="96.0" text="Editar" />
+                  <Button layoutX="655.0" layoutY="12.0" mnemonicParsing="false" onAction="#abrirNuevoFormulario" prefHeight="25.0" prefWidth="96.0" text="Nuevo" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="29.0" layoutY="342.0" prefHeight="372.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+               <children>
+                  <TableView fx:id="tablaPedidos" layoutX="23.0" layoutY="6.0" prefHeight="350.0" prefWidth="953.0">
+                     <columns>
+                        <TableColumn prefWidth="114.33333587646484" text="Pedido" />
+                        <TableColumn prefWidth="152.33334350585938" text="Estado" />
+                        <TableColumn prefWidth="817.6666564941406" text="Cliente" />
+                     </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </AnchorPane>
+   </children>
 </AnchorPane>
