--- a/src/main/resources/fxml/Ventas/Pedido/View.fxml
+++ b/src/main/resources/fxml/Ventas/Pedido/View.fxml
@@ -1,11 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
+<AnchorPane id="AnchorPane" fx:id="pedido_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.PedidoController">
    <children>
-      <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
+      <AnchorPane fx:id="pedido_container" prefHeight="572.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="81.0" layoutY="11.0" text="Pedido:">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Line endX="850.0" layoutX="123.0" layoutY="49.0" startX="-100.0" />
+                  <Label layoutX="171.0" layoutY="11.0" text="CodPedido">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="911.0" layoutY="12.0" mnemonicParsing="false" onAction="#regresarFormulario" text="Regresar" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="51.0" prefHeight="205.0" prefWidth="1000.0" AnchorPane.bottomAnchor="317.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="370.0" layoutY="14.0" text="Vendedor:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="728.0" layoutY="14.0" text="Estado:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="55.0" text="Tipo Doc.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="370.0" layoutY="70.0" text="Fecha de Pedido:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="126.0" text="Dir. Envío:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="154.0" text="Dir. Facturación:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="98.0" text="Moneda:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="370.0" layoutY="98.0" text="Tipo de cambio:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="728.0" layoutY="70.0" text="Fecha Est. Entrega:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <RadioButton fx:id="tipoDocBoleta" layoutX="123.0" layoutY="57.0" mnemonicParsing="false" text="Boleta" />
+                  <RadioButton fx:id="tipoDocFactura" layoutX="217.0" layoutY="57.0" mnemonicParsing="false" text="Factura" />
+                  <TextField layoutX="123.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
+                  <TextField editable="false" layoutX="444.0" layoutY="12.0" prefHeight="25.0" prefWidth="160.0" />
+                  <TextField editable="false" layoutX="853.0" layoutY="12.0" prefHeight="25.0" prefWidth="120.0" />
+                  <Label layoutX="370.0" layoutY="42.0" text="R.U.C.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="ruc" layoutX="444.0" layoutY="40.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Label layoutX="728.0" layoutY="42.0" text="D.N.I.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="dni" layoutX="853.0" layoutY="40.0" prefHeight="25.0" prefWidth="120.0" />
+                  <DatePicker layoutX="502.0" layoutY="68.0" prefHeight="25.0" prefWidth="101.0" />
+                  <DatePicker layoutX="871.0" layoutY="68.0" prefHeight="25.0" prefWidth="101.0" />
+                  <TextField editable="false" layoutX="123.0" layoutY="96.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField editable="false" layoutX="502.0" layoutY="96.0" prefHeight="25.0" prefWidth="101.0" />
+                  <TextField fx:id="envioDir" layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="604.0" />
+                  <TextField fx:id="factDir" layoutX="123.0" layoutY="152.0" prefHeight="25.0" prefWidth="604.0" />
+                  <CheckBox fx:id="mismaDir" layoutX="14.0" layoutY="185.0" mnemonicParsing="false" text="Marque si ambas direcciones son la misma" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="256.0" maxHeight="317.0" maxWidth="750.0" prefHeight="317.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="255.0">
+               <children>
+                  <AnchorPane prefHeight="40.0" prefWidth="750.0" AnchorPane.bottomAnchor="277.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="5.0" text="Cant.:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Spinner fx:id="cantProd" layoutX="68.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
+                        <Label layoutX="208.0" layoutY="6.0" text="Producto:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
+                        <Button layoutX="529.0" layoutY="6.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="101.0" text="Agregar Producto">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="33.0" layoutY="44.0" prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="40.0">
+                     <children>
+                        <TableView layoutX="14.0" layoutY="2.0" prefHeight="192.0" prefWidth="782.0">
+                           <columns>
+                              <TableColumn prefWidth="86.33333587646484" text="Cod." />
+                              <TableColumn prefWidth="398.66666412353516" text="Descripción" />
+                              <TableColumn minWidth="0.0" prefWidth="61.66668701171875" text="Cant." />
+                              <TableColumn prefWidth="117.33331298828125" text="P.U." />
+                              <TableColumn minWidth="0.0" prefWidth="118.00003051757812" text="Precio" />
+                           </columns>
+                        </TableView>
+                        <TextField editable="false" layoutX="676.0" layoutY="199.0" prefHeight="13.0" prefWidth="120.0" />
+                        <TextField editable="false" layoutX="676.0" layoutY="224.0" prefHeight="13.0" prefWidth="120.0" />
+                        <Label layoutX="573.0" layoutY="257.0" text="Total: " />
+                        <Label layoutX="573.0" layoutY="230.0" text="I.G.V. (18%):" />
+                        <Label layoutX="573.0" layoutY="203.0" text="Subtotal: " />
+                        <TextField editable="false" layoutX="676.0" layoutY="250.0" prefHeight="13.0" prefWidth="120.0" />
+                     </children>
+                  </AnchorPane>
+                  <TitledPane animated="false" collapsible="false" layoutX="812.0" layoutY="45.0" prefHeight="273.0" prefWidth="177.0" text="Acciones" AnchorPane.leftAnchor="812.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="42.0">
+                     <content>
+                        <AnchorPane prefHeight="239.0" prefWidth="175.0">
+                           <children>
+                              <Button layoutX="71.0" layoutY="5.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="5.0" />
+                              <Button layoutX="72.0" layoutY="86.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                              <Button layoutX="71.0" layoutY="157.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="D" />
+                              <Label layoutX="76.0" layoutY="57.0" text="Editar" />
+                              <Label layoutX="70.0" layoutY="128.0" text="Eliminar" />
+                              <Label layoutX="61.0" layoutY="194.0" text="Descuentos" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
