--- a/src/main/resources/fxml/Ventas/Proforma/Index.fxml
+++ b/src/main/resources/fxml/Ventas/Proforma/Index.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -12,64 +11,57 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="proforma_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.ProformaController">
    <children>
-      <AnchorPane layoutX="43.0" layoutY="43.0" prefHeight="572.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <TitledPane animated="false" collapsible="false" layoutX="23.0" layoutY="50.0" prefHeight="123.0" prefWidth="953.0" text="Búsqueda" AnchorPane.bottomAnchor="372.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="50.0">
-               <content>
-                  <AnchorPane prefHeight="91.0" prefWidth="951.0">
-                     <children>
-                        <TextField fx:id="clienteBusq" layoutX="452.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
-                        <Button fx:id="buscarPedido" layoutX="864.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
-                        <Label layoutX="11.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Pedido:" AnchorPane.topAnchor="0.0">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <ComboBox fx:id="estadoBusq" layoutX="821.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
-                        <TextField fx:id="pedidoBusq" layoutX="129.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
-                        <Label layoutX="334.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Cliente:" AnchorPane.topAnchor="0.0">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="703.0" layoutY="9.6" text="Estado:" AnchorPane.topAnchor="0.0">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </TitledPane>
-            <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TitledPane animated="false" collapsible="false" prefHeight="123.0" prefWidth="953.0" text="Búsqueda" AnchorPane.bottomAnchor="372.0" AnchorPane.leftAnchor="23.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="50.0">
+         <content>
+            <AnchorPane prefHeight="91.0" prefWidth="951.0">
                <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="89.0" layoutY="8.0" text="Proforma">
+                  <TextField fx:id="clienteBusq" layoutX="452.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="buscarPedido" layoutX="864.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <Label layoutX="11.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Proforma" AnchorPane.topAnchor="0.0">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="visualizarPedido1" layoutX="879.0" layoutY="13.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-                  <Button fx:id="visualizarPedido11" layoutX="766.0" layoutY="11.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Editar" />
+                  <ComboBox fx:id="estadoBusq" layoutX="821.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                  <TextField fx:id="pedidoBusq" layoutX="129.0" layoutY="9.6" prefHeight="25.0" prefWidth="106.0" AnchorPane.topAnchor="0.0" />
+                  <Label layoutX="334.0" layoutY="9.6" prefHeight="21.0" prefWidth="114.0" text="Cliente:" AnchorPane.topAnchor="0.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="703.0" layoutY="9.6" text="Estado:" AnchorPane.topAnchor="0.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="29.0" layoutY="342.0" prefHeight="372.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
-               <children>
-                  <TableView fx:id="tablaPedidos" layoutX="23.0" layoutY="6.0" prefHeight="350.0" prefWidth="953.0">
-                     <columns>
-                        <TableColumn prefWidth="114.33333587646484" text="Pedido" />
-                        <TableColumn prefWidth="152.33334350585938" text="Estado" />
-                        <TableColumn prefWidth="817.6666564941406" text="Cliente" />
-                     </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
+         </content>
+      </TitledPane>
+      <AnchorPane prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+            <Label layoutX="89.0" layoutY="8.0" text="Proforma">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Button layoutX="879.0" layoutY="13.0" mnemonicParsing="false" onAction="#abrirEditarFormulario" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+            <Button layoutX="766.0" layoutY="11.0" mnemonicParsing="false" onAction="#abrirNuevoFormulario" prefHeight="25.0" prefWidth="96.0" text="Nuevo" />
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
+      </AnchorPane>
+      <AnchorPane prefHeight="372.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+         <children>
+            <TableView fx:id="tablaPedidos" layoutX="23.0" layoutY="6.0" prefHeight="350.0" prefWidth="953.0">
+               <columns>
+                  <TableColumn prefWidth="114.33333587646484" text="Proforma" />
+                  <TableColumn prefWidth="152.33334350585938" text="Estado" />
+                  <TableColumn prefWidth="817.6666564941406" text="Cliente" />
+               </columns>
+            </TableView>
+         </children>
       </AnchorPane>
    </children>
 </AnchorPane>
