--- a/src/main/resources/fxml/Ventas/Proforma/View.fxml
+++ b/src/main/resources/fxml/Ventas/Proforma/View.fxml
@@ -15,19 +15,20 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="proforma_container" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.ProformaController">
    <children>
       <AnchorPane layoutX="303.0" layoutY="53.0" prefHeight="572.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="395.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="477.0" layoutY="10.0" text="Nueva Proforma">
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="24.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="80.0" layoutY="10.0" text="Proforma: idProforma">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Label>
                   <Line endX="850.0" layoutX="126.0" layoutY="49.0" startX="-100.0" />
+                  <Button layoutX="911.0" layoutY="12.0" mnemonicParsing="false" onAction="#regresarFormulario" text="Regresar" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="45.0" layoutY="83.0" prefHeight="120.0" prefWidth="1000.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
